Company Name Added

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <h1>Velo-Fix</h1>
+    <div> 
+        <li>
+            <ul><h1>Velo-Fix</h1></ul>
+        </li>
+    </div>
+    
 </body>
 </html>
