--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <div> 
+    <div id="header"> 
         <li>
             <ul><h1>Velo-Fix</h1></ul>
         </li>
